@@ -1,5 +1,11 @@
 2010-01-13  Tristan Gingold  <gingold@adacore.com>
 
+	* reloc.c: Add MACH_O_X86_64 relocations.
+	* bfd-in2.h: Regenerate.
+	* libbfd.h: Regenerate.
+
+2010-01-13  Tristan Gingold  <gingold@adacore.com>
+
 	* archive.c (normalize): Use lbasename.
 	(bfd_bsd_truncate_arname): Ditto.
 	(bfd_gnu_truncate_arname): Ditto.
